--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Pillow==2.4.0
-numpy==1.8.1
-scipy==0.13.3
-wsgiref==0.1.2
-colorama==0.3.1
+colorama==0.4.4
+numpy==1.20.0
+opencv-python==4.5.1.48
+Pillow==8.1.0
+scipy==1.6.0
